log
Fri 19 Aug 2022 04:28:45 PM UTC: 
 list.c | 45 +++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 41 insertions(+), 4 deletions(-)
 tests:  0|0
9174ca9
Fri 19 Aug 2022 04:30:37 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
ab1ac5b
Fri 19 Aug 2022 04:33:21 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
6d2d4f3
Fri 19 Aug 2022 04:37:05 PM UTC: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|0
d85d99d
Fri 19 Aug 2022 04:38:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
540237d
Fri 19 Aug 2022 04:43:04 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b205e14
